tests/ui/badpaste.stderr
error: multiple nontrivial entries in ${paste ...}
  --> ui/badpaste.rs:13:18
   |
13 |         ${paste $ttype _ $ftype}
   |                  ^^^^^

error: multiple nontrivial entries in ${paste ...}
  --> ui/badpaste.rs:13:27
   |
13 |         ${paste $ttype _ $ftype}
   |                           ^^^^^

error: not allowed in within ${paste ...} (or case_changing)
  --> ui/badpaste.rs:20:29
   |
20 |     struct ${paste $tname _ 42};
   |                             ^^
